# cram-books-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PROGRESS.md  README.md  config.py  conftest.py  env_loader.py  exec_api.py  pyproject.toml  server.py
.github/workflows/: deploy.yml  test.yml
apps/gas/: .prod_deploy_id  package-lock.json  package.json  vitest.config.ts
apps/gas/src/: index.ts
apps/gas/src/__mocks__/: gas-stubs.ts
apps/gas/src/handlers/: planner.ts  planner_monthly.ts
apps/gas/src/interfaces/: spreadsheet.ts
apps/gas/src/lib/: columns.ts  student_resolver.ts
apps/gas/src/services/: factory.ts
apps/gas/src/types/: domain.ts
apps/mcp/: .env.example  Dockerfile  conftest.py  pyproject.toml  railway.json  server.py  sheets_client.py
apps/mcp/core/: __init__.py
apps/mcp/handlers/: __init__.py  books.py  books_handler.py  planner.py  planner_handler.py  planner_monthly.py  students.py  students_handler.py
apps/mcp/handlers/students/: __init__.py  handler.py
apps/mcp/lib/: id_rules.py  input_parser.py  preview_cache.py  sheet_utils.py
apps/mcp/tests/: __init__.py  test_base_handler.py  test_books_handler.py  test_books_tools.py  test_helpers.py  test_planner_handler.py  test_planner_tools.py  test_preview_cache.py  test_students_handler.py  test_students_tools.py
core/: base_handler.py  two_phase_mixin.py
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  planner_monthly.md
docs/specs/: planner_monthly.md  speed_planner_weekly.md
handlers/books/: __init__.py  handler.py  search.py
handlers/planner/: __init__.py  handler.py
handlers/students/: handler.py
lib/: __init__.py  common.py  errors.py  input_parser.py  types.py
scripts/: deploy_mcp.sh  refresh_gas_auth.sh
tests/: run_tests.py  test_base_handler.py  test_books_handler.py  test_books_tools.py  test_helpers.py  test_planner_handler.py  test_planner_tools.py  test_students_handler.py  test_students_tools.py  test_two_phase_mixin.py
(+7 files in other folders)
